--- a/test/circle_inter/Makefile
+++ b/test/circle_inter/Makefile
@@ -1,9 +1,9 @@
 app: build/cinter.o
 
-build/cinter.o: main.c
+build/cinter.o: main.c cinter.h impl/cinter-impl.h
 	gcc -Wall -lm main.c -o build/cinter.o
 
-run: build/cinter.o
+run: build/cinter.o 
 	./build/cinter.o
 
 clean:
