--- a/test/circle_inter/Makefile
+++ b/test/circle_inter/Makefile
@@ -1,7 +1,10 @@
+CFLAGS=-Wall -g -lm
+MAINPROG=main.c
+
 app: build/cinter.o
 
 build/cinter.o: main.c cinter.h impl/cinter-impl.h
-	gcc -Wall -lm main.c -o build/cinter.o
+	gcc $(CFLAGS) $(MAINPROG) -o build/cinter.o
 
 run: build/cinter.o 
 	./build/cinter.o
