points find center ve skip perfect test

--- a/test/circle_inter/Makefile
+++ b/test/circle_inter/Makefile
@@ -3,7 +3,7 @@ MAINPROG=main.c
 
 app: build/cinter.o
 
-build/cinter.o: main.c cinter.h impl/cinter-impl.h
+build/cinter.o: main.c cinter.h impl/cinter-impl.h config.h
 	gcc $(CFLAGS) $(MAINPROG) -o build/cinter.o
 
 run: build/cinter.o 
