--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,7 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
 # point out the CMake, where to find the executable source file
-add_executable(${PROJECT_NAME}
-        src/pico.c
-)
+add_executable(${PROJECT_NAME} src/pico.c)
 
 # create map/bin/hex/uf2 files.
 pico_add_extra_outputs(${PROJECT_NAME})
@@ -22,3 +20,9 @@ pico_add_extra_outputs(${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME}
             pico_stdlib
 )
+
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 0)
+
+pico_add_extra_outputs(${PROJECT_NAME})
+
